--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.6.0
 Django==4.2
 djangorestframework==3.14.0
 gunicorn==20.1.0
+psycopg==3.1.8
 python-dotenv==1.0.0
 pytz==2023.3
 sqlparse==0.4.4
+typing_extensions==4.5.0
 tzdata==2023.3
