--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@v3
         with:
