--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,6 +8,6 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@v3
         with:
-          find: "hello"
+          find: "ic()"
           replace: "world"
           regex: false
