--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,6 +8,12 @@ jobs:
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@v3
         with:
-          find: "ic()"
+          find: "hello"
           replace: "world"
           regex: false
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
