--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,7 +13,7 @@ jobs:
           regex: false
 
       - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
