--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,9 +11,4 @@ jobs:
           find: "hello"
           replace: "world"
           regex: false
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+        run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
