--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -6,11 +6,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Find and Replace
-        id: abc
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "hello"
           replace: "world"
           regex: false
       - name: check
-        run echo "${{steps.abc.modifiedFiles}}"  >> $GITHUB_OUTPUT
+        run: echo "hello 35"  >> $GITHUB_OUTPUT
