--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -12,5 +12,8 @@ jobs:
           find: "hello"
           replace: "world"
           regex: false
-      - name: check
-        run: echo "${{steps.abc.outputs.modifiedFiles}}"  >> $GITHUB_OUTPUT
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
