--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,8 +13,5 @@ jobs:
           replace: "world"
           include: "book/**"
           regex: false
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+      - run: |
+          echo ${{ steps.abc.outputs.modifiedFiles}}
