--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -15,6 +15,9 @@ jobs:
       - name: check
         run: |
           echo ${{ steps.abc.outputs.modifiedFiles}}
-          if [[${{ steps.abc.outputs.modifiedFiles}}]] > 3; then
+          if [[${{ steps.abc.outputs.modifiedFiles}}]] > 1; then
+            echo "Abort"
             exit 2
+          else
+            echo "OK..."
           fi
