--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -9,9 +9,8 @@ jobs:
         id: abc
         uses: jacobtomlinson/gha-find-replace@v3
         with:
-          find: "ic("
+          find: "^ic\("
           replace: " "
-          regex: false
       - name: Find and Replace icecreame
         id: abc_icecreame
         uses: jacobtomlinson/gha-find-replace@v3
