--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -9,20 +9,22 @@ jobs:
         id: abc
         uses: jacobtomlinson/gha-find-replace@v3
         with:
-          find: "^ic\\("
+          find: "/^ic\\("
           replace: " "
+          exclude: ".github/**"
       - name: Find and Replace icecreame
         id: abc_icecreame
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "icecreame"
           replace: " "
+          exclude: ".github/**"
           regex: false
       - name: check
         run: |
           echo ${{ steps.abc.outputs.modifiedFiles}}
           echo ${{ steps.abc_icecreame.outputs.modifiedFiles}}
-          if [[ ${{ steps.abc.outputs.modifiedFiles}} == '1' ]]; then
+          if [[ ${{ steps.abc.outputs.modifiedFiles}} == '0' ]]; then
             echo "OK..."
           else
             echo "ERR..."
