--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,7 +1,7 @@
 name: My Workflow
 on: [push]
 jobs:
-  build:
+  check_ic:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -18,7 +18,7 @@ jobs:
         with:
           find: "from icecream"
           replace: " "
-          exclude: ".github/**"
+          exclude: ".github/**, book"
           regex: false
       - name: check
         run: |
