--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,16 +11,14 @@ jobs:
         with:
           find: "( |\\t|^)ic\\("
           replace: " "
-          exclude: ".github/** book/**"
-          exclude: "book/**"
+          exclude: "(.github/**, book/**)"
       - name: Find and Replace icecreame
         id: abc_icecreame
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "from icecream"
           replace: " "
-          exclude: ".github/**"
-          exclude: "book/**"
+          exclude: "(.github/**, book/**)"
           regex: false
       - name: check
         run: |
