--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,24 +11,24 @@ jobs:
         with:
           find: "( |\\t|^)ic\\("
           replace: " "
-          exclude: "[.github/**, book/**]"
+          exclude: [".github/**", "book/**"]
       - name: Find and Replace icecreame
         id: abc_icecreame
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "from icecream"
           replace: " "
-          exclude: "[.github/**, book/**]"
+          exclude: [".github/**", "book/**"]
           regex: false
       - name: check
         run: |
-          if [[ ${{ steps.abc_ic.outputs.modifiedFiles}} == '0' ]]; then
+          if [[ ${{ steps.abc_ic.outputs.modifiedFiles}} == 0 ]]; then
             echo "OK..."
           else
             echo "ERR... found ic in code"
             exit 2
           fi
-          if [[ ${{ steps.abc_icecreame.outputs.modifiedFiles}} == '0' ]]; then
+          if [[ ${{ steps.abc_icecreame.outputs.modifiedFiles}} == 0 ]]; then
             echo "OK..."
           else
             echo "ERR... found from icecream in code"
